--- a/TheNextCar/MainWindow.xaml
+++ b/TheNextCar/MainWindow.xaml
@@ -1,23 +1,26 @@
-﻿<Window x:Name="TheNextCar" x:Class="TheNextCar.MainWindow"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid Margin="0,0,2,0" Background="Black">
-        <Button x:Name="StartButton" Content="STOPPED" Click="OnStartButtonClicked" Foreground="White" Background="Red" FontWeight="Bold" FontSize="18"/>
-        <Label Content="Power" Foreground="White"/>
-        <Label Content="Security" Foreground="White"/>
-        <Button x:Name="AccuButton" Content="OFF" Click="OnAccuButtonClicked" />
-        <Button x:Name="LockDoorButton" Content="LOCK" Click="OnLockDoorButtonClicked"/>
-        <Label x:Name="AccuState" Content="no power" FontSize="10" Foreground="#FF8B8B8B"/>
-        <Label x:Name="LockDoorState" Content="Door is unlocked" FontSize="10" Foreground="#FF8F8F8F"/>
-        <Image Source="assets/navigation.jpg" />
-        <Label Content="126" FontSize="48" FontWeight="Bold" Height="67" />
-        <Label Content="km/h" />
-        <Label Content="45" FontSize="48" FontWeight="Bold"/>
-        <Label Content="x 1000 rpm" />
-        <Label Content="no power available" Name="status" Foreground="White" FontSize="10"/>
-        <Label Content="Door" Foreground="White"/>
-        <Button x:Name="DoorOpenButton" Content="CLOSE" Background="Wheat" Click="OnDoorOpenButtonClicked"/>
-        <Label x:Name="DoorOpenState" Content="Door is openedd" FontSize="10" Foreground="#FF8F8F8F"/>
+﻿<Window x:Class="TheNextCar.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:TheNextCar"
+        mc:Ignorable="d"
+        Title="MainWindow" Height="450" Width="800">
+    <Grid Height="450">
+        <Image Source="/assets/navigation.jpg" HorizontalAlignment="Left" Height="278" VerticalAlignment="Top" Width="800" Margin="-4,0,0,0" Stretch="UniformToFill"/>
+
+        <Button x:Name="StartButton" Content="STARTED" HorizontalAlignment="Left" Margin="45,312,0,0" VerticalAlignment="Top" Height="53" Width="159" Background="#FF54E861" FontSize="18" FontWeight="Bold" Click="OnStartButtonClicked"/>
+        <Label x:Name="Status" Content="Engine Started" HorizontalAlignment="Left" Margin="45,381,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.401,0.74" FontSize="16"/>
+        <Label x:Name="DoorOpenState_Copy" Content="Door" HorizontalAlignment="Left" Margin="325,302,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.401,0.74" FontSize="16"/>
+        <Button x:Name="DoorOpenButton" Content="CLOSED" HorizontalAlignment="Left" Margin="300,338,0,0" VerticalAlignment="Top" Height="27" Width="96" Click="OnDoorOpenButtonClicked"/>
+        <Label x:Name="DoorOpenState" Content="Door is closed" HorizontalAlignment="Left" Margin="300,381,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.401,0.74" FontSize="16"/>
+        <Label x:Name="DoorOpenState_Copy1" Content="Security" HorizontalAlignment="Left" Margin="473,302,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.401,0.74" FontSize="16"/>
+        <Button x:Name="LockDoorButton" Content="LOCKED" HorizontalAlignment="Left" Margin="458,338,0,0" VerticalAlignment="Top" Height="27" Width="96" Click="OnLockDoorButtonClicked"/>
+        <Label x:Name="LockDoorState" Content="Door is locked" HorizontalAlignment="Left" Margin="458,381,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.401,0.74" FontSize="16"/>
+        <Label x:Name="DoorOpenState_Copy2" Content="Power" HorizontalAlignment="Left" Margin="637,302,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.401,0.74" FontSize="16"/>
+        <Button x:Name="AccuButton" Content="ON" HorizontalAlignment="Left" Margin="616,338,0,0" VerticalAlignment="Top" Height="27" Width="96" Click="OnAccuButtonClicked"/>
+        <Label x:Name="AccuState" Content="Power is on" HorizontalAlignment="Left" Margin="616,381,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.401,0.74" FontSize="16"/>
+
+
     </Grid>
 </Window>
-
